fix: resolver erro de transação ao criar orçamento e melhorar tratamento de erros
- Separar criação de orçamento (com @Transactional) do envio de email (fora da transação)
- Adicionar validação clara de email com mensagens descritivas
- Implementar exception handlers específicos para EMAIL_ERROR, USER_ERROR e TRANSACTION_ERROR
- Melhorar extração de mensagens de erro de constraint do banco de dados
- Email não é mais crítico - falha de envio não impede criação do orçamento
- Adicionar método privado criarOrcamentoInterno() e enviarEmailOrcamentoAssincrono()
- Adicionar método validarEmailClienteOuLancarExcecao() com validações
- GlobalExceptionHandler agora trata TransactionSystemException com mensagens claras
- RuntimeException agora detecta tipo de erro e retorna status/code apropriado

Soluciona: TransactionSystemException: Could not commit JPA transaction
Exemplo de resposta de erro agora:
- 400 EMAIL_ERROR: Cliente não possui email cadastrado
- 400 USER_ERROR: Cliente não possui usuário cadastrado
- 500 TRANSACTION_ERROR: Erro ao processar constraint do banco

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>